# Cytrus

./: .gitignore  BuildTests.bat  CMakeLists.txt  README.md  build.bat
include/: Cytrus.h  CytrusFile.h  Lexer.h  Node.h  OTree.h  Token.h  Types.h
lib/: CMakeLists.txt  Cytrus.cpp  CytrusFile.cpp  Lexer.cpp  Node.cpp  OTree.cpp
tests/: CMakeLists.txt  Test.cpp
